update: added deploy to travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,11 @@ install:
 
 script:
   - yarn run build
-  - yarn run deploy
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  local_dir: build
+  on:
+    branch: master
