--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
-    "gh-pages": "^3.1.0",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -24,8 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "generateicons": "generate-icons --file ./public/logo.png",
-    "deploy": "gh-pages -d build"
+    "generateicons": "generate-icons --file ./public/logo.png"
   },
   "eslintConfig": {
     "extends": [
